# RPiBackLightControl

./: README.md  main.py  pr_guidelines.md  pyproject.toml  readme.md  run.sh
src/custom_control/: main.py
tests/: test_main.py
