[tool.poetry]
name = "custom_control"
version = "1.0.0"
description = "Control RPI brightness programatically"
authors = ["Carlos <labrado.carlos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^2.1.2"
requests = "^2.28.2"
rpi-backlight = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
backlight_start = "custom_control.main:main"
